# OCR_p2s_data_miner

pdf_creater/: .gitignore  main.py  pdf_generator.py  pyproject.toml  random_vin.py
service/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
service/app/: Dockerfile  main.py  pyproject.toml
