[tool.poetry]
name = "pdf-creater"
version = "0.1.0"
description = ""
authors = [" Nasibullin Alan Maratovich <alan.nasibyllin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reportlab = "^4.2.5"
qrcode = {extras = ["pil"], version = "^8.0"}
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
